crates/analyzer/tests/snapshots/errors__duplicate_typedef_in_module.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: a type named "bar" has already been defined
  ┌─ compile_errors/duplicate_typedef_in_module.fe:1:6
  │
1 │ type bar = u8
  │      ^^^ `bar` first defined here
2 │ 
3 │ type bar = u8
  │      --- `bar` redefined here

error: function name `bar` conflicts with previously defined type
  ┌─ compile_errors/duplicate_typedef_in_module.fe:1:6
  │
1 │ type bar = u8
  │      ^^^ `bar` first defined here
  ·
6 │     pub fn bar() {}
  │            --- `bar` redefined here


